--- a/Jpage/templates/Jpage/map.html
+++ b/Jpage/templates/Jpage/map.html
@@ -789,7 +789,7 @@ function removeMarkerByPlaceName(day, placeName) {
     });
 
      // Kakao API 키
-    const kakaoApiKey = '1ca1474a66a4cd0fdd5d9e5a9e020070';
+    const kakaoApiKey = '메롱';
 
     // 장소 추가 버튼 클릭 이벤트 처리
     document.getElementById('openModalButton').addEventListener('click', function() {
